--- a/dog/styles.css
+++ b/dog/styles.css
@@ -5,10 +5,11 @@ body {
 	margin: 0;
 	padding: 0;
   min-height: 100%;
-}d
+}
 #header{
 	display: flex;
-	justify-content: center !important;
+	flex-direction: row;
+	justify-content: center;
 	height: 30vh;
 	align-items: center;
 }
@@ -39,7 +40,9 @@ body{
     margin: 0;
     padding: 0;
     padding-bottom: 6vh;
-		background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%);}
+		background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
+		background-attachment: fixed;
+	}
 
 #photo-container{
     height: 64vh;
